--- a/css/style.css
+++ b/css/style.css
@@ -95,14 +95,6 @@ body{
 }
 
 
-
-.image-container{
-    flex: 1;
-    text-align: center ;
-
-  
-}
-
 .move-hp{
     display: flex;
     justify-content: flex-end;
@@ -132,15 +124,37 @@ body{
     font-weight: 800;
 }
 
+.image-container{
+    flex: 1;
+    text-align: center ; 
+    overflow: hidden;
+    position: relative; 
+    min-height: 46%;
+  
+}
 
+
+/*
+.image-container img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: center top; 
+  width: 85px;
+  bottom: 55%;
+}
+*/
 
 
 .image-container img{
-    width: 100px; /* Adjust this value as needed */
-    height: auto; /* Automatically calculate the height to maintain aspect ratio */
-    position: relative;
-
+  position: absolute;
+  left: 0;
+  bottom:35%;
+  left: 50%;
+  transform: translate(-50%, 20%);
+  height: 60%;
 }
+
 
 .text-container{
     flex: 1;
@@ -150,6 +164,9 @@ body{
     padding: 0; 
     border-radius: 0 0 3px 3px;
     border-top: 1px solid rgb(179, 174, 174);
+    max-height: 54%;
+    
+    
 
 }
 
